--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="https://lambertlenack.com/favicon.ico"> 
     <title>ACCEUIL - LAMBERT.LENACK</title>
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <header>
@@ -19,7 +19,7 @@
             <div class="menu-button-line"></div>
         </div>
         <ul class="dropdown-menu" id="dropdown-menu">
-            <li><a href="/Public/Categorie/urbanisme.html"><strong>URBANISME</strong></a></li>
+            <li><a href="./Public/Categorie/urbanisme.html"><strong>URBANISME</strong></a></li>
             <li><a href="categories/logement.html"><strong>LOGEMENT</strong></a></li>
             <li><a href="categories/bureaux.html"><strong>BUREAUX</strong></a></li>
             <li class="spacer"></li>
@@ -32,54 +32,54 @@
         <section class="projects">
             <div class="project">
                 <a href="/Public/Categorie/project1/project1.html">
-                    <img src="/image/project1.jpg" alt="Projet 1">
+                    <img src="./image/project1.jpg" alt="Projet 1">
                     <div class="project-name">RUE DES PYR&Eacute;N&Eacute;ES</div>
                 </a>
             </div>
             <div class="project">
                 <a href="projects/project2.html">
-                    <img src="/image/project2.jpg" alt="Projet 2">
+                    <img src="./image/project2.jpg" alt="Projet 2">
                     <div class="project-name">Projet 2</div>
                 </a>
             </div>
             <div class="project">
                 <a href="projects/project3.html">
-                    <img src="/image/project3.jpg" alt="Projet 3">
+                    <img src="./image/project3.jpg" alt="Projet 3">
                     <div class="project-name">Projet 3</div>
                 </a>
             </div>
             <div class="project">
                 <a href="projects/project4.html">
-                    <img src="/image/project4.jpg" alt="Projet 4">
+                    <img src="./image/project4.jpg" alt="Projet 4">
                     <div class="project-name">Projet 4</div>
                 </a>
             </div>
             <div class="project">
                 <a href="projects/project5.html">
-                    <img src="/image/project5.jpg" alt="Projet 5">
+                    <img src="./image/project5.jpg" alt="Projet 5">
                     <div class="project-name">Projet 5</div>
                 </a>
             </div>
             <div class="project">
                 <a href="projects/project6.html">
-                    <img src="/image/project6.jpg" alt="Projet 6">
+                    <img src="./image/project6.jpg" alt="Projet 6">
                     <div class="project-name">Projet 6</div>
                 </a>
             </div>
             <div class="project">
                 <a href="projects/project7.html">
-                    <img src="/image/project7.jpg" alt="Projet 7">
+                    <img src="./image/project7.jpg" alt="Projet 7">
                     <div class="project-name">Projet 7</div>
                 </a>
             </div>
             <div class="project">
                 <a href="projects/project8.html">
-                    <img src="/image/project8.jpg" alt="Projet 8">
+                    <img src="./image/project8.jpg" alt="Projet 8">
                     <div class="project-name">Projet 8</div>
                 </a>
             </div>
         </section>
     </main>
-    <script src="/js/scripts.js"></script>
+    <script src="js/scripts.js"></script>
 </body>
 </html>
