--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <main>
         <section class="projects">
             <div class="project">
-                <a href="/Public/Categorie/project1/project1.html">
+                <a href="./Public/Categorie/project1/project1.html">
                     <img src="./image/project1.jpg" alt="Projet 1">
                     <div class="project-name">RUE DES PYR&Eacute;N&Eacute;ES</div>
                 </a>
