--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="menu-button-line"></div>
         </div>
         <ul class="dropdown-menu" id="dropdown-menu">
-            <li><a href="./Public/Categorie/urbanisme.html"><strong>URBANISME</strong></a></li>
+            <li><a href="Public/Categorie/urbanisme.html"><strong>URBANISME</strong></a></li>
             <li><a href="categories/logement.html"><strong>LOGEMENT</strong></a></li>
             <li><a href="categories/bureaux.html"><strong>BUREAUX</strong></a></li>
             <li class="spacer"></li>
@@ -31,8 +31,8 @@
     <main>
         <section class="projects">
             <div class="project">
-                <a href="./Public/Categorie/project1/project1.html">
-                    <img src="./image/project1.jpg" alt="Projet 1">
+                <a href="Public/Categorie/project1/project1.html">
+                    <img src="image/project1.jpg" alt="Projet 1">
                     <div class="project-name">RUE DES PYR&Eacute;N&Eacute;ES</div>
                 </a>
             </div>
