--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="https://lambertlenack.com/favicon.ico"> 
-    <title>ACCEUIL - LAMBERT.LENACK</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" type="image/png" href="https://votredomaine.github.io/maz/favicon.ico"> 
+    <title>ACCUEIL - LAMBERT.LENACK</title>
+    <link rel="stylesheet" href="/maz/css/styles.css"> <!-- Chemin absolu -->
 </head>
 <body>
     <header>
-        <a href="index.html">
-            <img src="https://lambertlenack.com/img/lambert-lenack.gif" alt="Logo" class="logo">
+        <a href="/maz/index.html"> <!-- Chemin absolu -->
+            <img src="https://votredomaine.github.io/maz/img/lambert-lenack.gif" alt="Logo" class="logo">
         </a>
     </header>
     <nav>
@@ -19,67 +19,67 @@
             <div class="menu-button-line"></div>
         </div>
         <ul class="dropdown-menu" id="dropdown-menu">
-            <li><a href="Public/Categorie/urbanisme.html"><strong>URBANISME</strong></a></li>
-            <li><a href="categories/logement.html"><strong>LOGEMENT</strong></a></li>
-            <li><a href="categories/bureaux.html"><strong>BUREAUX</strong></a></li>
+            <li><a href="/maz/Public/Categorie/urbanisme.html"><strong>URBANISME</strong></a></li> <!-- Chemin absolu -->
+            <li><a href="/maz/categories/logement.html"><strong>LOGEMENT</strong></a></li> <!-- Chemin absolu -->
+            <li><a href="/maz/categories/bureaux.html"><strong>BUREAUX</strong></a></li> <!-- Chemin absolu -->
             <li class="spacer"></li>
-            <li><a href="contact.html"><strong>CONTACT</strong></a></li>
+            <li><a href="/maz/contact.html"><strong>CONTACT</strong></a></li> <!-- Chemin absolu -->
             <li><a href="https://www.instagram.com"><strong>INSTAGRAM</strong></a></li>
-            <li><a href="actualite.html"><strong>ACTUALIT&Eacute;S</strong></a></li>
+            <li><a href="/maz/actualite.html"><strong>ACTUALITÉS</strong></a></li> <!-- Chemin absolu -->
         </ul>
     </nav>
     <main>
         <section class="projects">
             <div class="project">
-                <a href="Public/Categorie/project1/project1.html">
-                    <img src="image/project1.jpg" alt="Projet 1">
-                    <div class="project-name">RUE DES PYR&Eacute;N&Eacute;ES</div>
+                <a href="/maz/Public/Categorie/project1/project1.html"> <!-- Chemin absolu -->
+                    <img src="/maz/image/project1.jpg" alt="Projet 1"> <!-- Chemin absolu -->
+                    <div class="project-name">RUE DES PYRÉNÉES</div>
                 </a>
             </div>
             <div class="project">
-                <a href="projects/project2.html">
-                    <img src="./image/project2.jpg" alt="Projet 2">
+                <a href="/maz/projects/project2.html"> <!-- Chemin absolu -->
+                    <img src="/maz/image/project2.jpg" alt="Projet 2"> <!-- Chemin absolu -->
                     <div class="project-name">Projet 2</div>
                 </a>
             </div>
             <div class="project">
-                <a href="projects/project3.html">
-                    <img src="./image/project3.jpg" alt="Projet 3">
+                <a href="/maz/projects/project3.html"> <!-- Chemin absolu -->
+                    <img src="/maz/image/project3.jpg" alt="Projet 3"> <!-- Chemin absolu -->
                     <div class="project-name">Projet 3</div>
                 </a>
             </div>
             <div class="project">
-                <a href="projects/project4.html">
-                    <img src="./image/project4.jpg" alt="Projet 4">
+                <a href="/maz/projects/project4.html"> <!-- Chemin absolu -->
+                    <img src="/maz/image/project4.jpg" alt="Projet 4"> <!-- Chemin absolu -->
                     <div class="project-name">Projet 4</div>
                 </a>
             </div>
             <div class="project">
-                <a href="projects/project5.html">
-                    <img src="./image/project5.jpg" alt="Projet 5">
+                <a href="/maz/projects/project5.html"> <!-- Chemin absolu -->
+                    <img src="/maz/image/project5.jpg" alt="Projet 5"> <!-- Chemin absolu -->
                     <div class="project-name">Projet 5</div>
                 </a>
             </div>
             <div class="project">
-                <a href="projects/project6.html">
-                    <img src="./image/project6.jpg" alt="Projet 6">
+                <a href="/maz/projects/project6.html"> <!-- Chemin absolu -->
+                    <img src="/maz/image/project6.jpg" alt="Projet 6"> <!-- Chemin absolu -->
                     <div class="project-name">Projet 6</div>
                 </a>
             </div>
             <div class="project">
-                <a href="projects/project7.html">
-                    <img src="./image/project7.jpg" alt="Projet 7">
+                <a href="/maz/projects/project7.html"> <!-- Chemin absolu -->
+                    <img src="/maz/image/project7.jpg" alt="Projet 7"> <!-- Chemin absolu -->
                     <div class="project-name">Projet 7</div>
                 </a>
             </div>
             <div class="project">
-                <a href="projects/project8.html">
-                    <img src="./image/project8.jpg" alt="Projet 8">
+                <a href="/maz/projects/project8.html"> <!-- Chemin absolu -->
+                    <img src="/maz/image/project8.jpg" alt="Projet 8"> <!-- Chemin absolu -->
                     <div class="project-name">Projet 8</div>
                 </a>
             </div>
         </section>
     </main>
-    <script src="js/scripts.js"></script>
+    <script src="/maz/js/scripts.js"></script> <!-- Chemin absolu -->
 </body>
 </html>
