--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
             <div class="menu-button-line"></div>
         </div>
         <ul class="dropdown-menu" id="dropdown-menu">
-            <li><a href="./Public/Categorie/urbanisme.html"><strong>URBANISME</strong></a></li>
-            <li><a href="categories/logement.html"><strong>LOGEMENT</strong></a></li>
-            <li><a href="categories/bureaux.html"><strong>BUREAUX</strong></a></li>
+            <li><a href="maz/Public/Categorie/urbanisme.html"><strong>URBANISME</strong></a></li>
+            <li><a href="maz/public/categories/logement.html"><strong>LOGEMENT</strong></a></li>
+            <li><a href="maz/public/categories/bureaux.html"><strong>BUREAUX</strong></a></li>
             <li class="spacer"></li>
             <li><a href="contact.html"><strong>CONTACT</strong></a></li>
             <li><a href="https://www.instagram.com"><strong>INSTAGRAM</strong></a></li>
@@ -31,13 +31,13 @@
     <main>
         <section class="projects">
             <div class="project">
-                <a href="/Public/Categorie/project1/project1.html">
-                    <img src="/image/project1.jpg" alt="Projet 1">
+                <a href="maz/Public/Categorie/project1/project1.html">
+                    <img src="/maz/image/project1.jpg" alt="Projet 1">
                     <div class="project-name">RUE DES PYR&Eacute;N&Eacute;ES</div>
                 </a>
             </div>
             <div class="project">
-                <a href="projects/project2.html">
+                <a href="/maz/Public/Categorie/projects/project2.html">
                     <img src="/image/project2.jpg" alt="Projet 2">
                     <div class="project-name">Projet 2</div>
                 </a>
